<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OTPActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorFade">

        <ImageView
            android:id="@+id/img_above"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/above_clip_art"
            android:scaleType="fitXY"
            android:layout_marginTop="-35dp"
            android:contentDescription="@string/img_above_clip_art" />

        <ImageView
            android:id="@+id/img_main_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/main_logo"
            android:contentDescription="@string/img_main_logo" />

        <TextView
            android:id="@+id/txt_hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_text_hello"
            android:textSize="15sp"
            android:layout_below="@+id/img_above"
            android:layout_marginTop="60dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/colorHelloText"/>

        <TextView
            android:id="@+id/txt_main_text"
            android:textSize="22sp"
            android:text="@string/enter_otp_code"
            android:layout_marginStart="25dp"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_hello" />


        <LinearLayout
            android:id="@+id/lay_code"
            android:background="@drawable/contact_edit_field_style"
            android:layout_below="@+id/txt_main_text"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/_70sdp"
            android:layout_marginEnd="@dimen/_70sdp"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_height="@dimen/_40sdp">

            <EditText
                android:textSize="21sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="4"
                android:inputType="number"
                android:letterSpacing="2"
                android:textAlignment="textStart"
                android:hint="@string/hint"
                android:textColorHint="@color/colorHint"
                android:layout_marginTop="11dp"
                android:textColor="@color/colorBlack"/>


        </LinearLayout>

        <LinearLayout
            android:layout_below="@+id/lay_code"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorFadeBlack"
                android:text="@string/otp_resend_1"/>

            <TextView
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:textColor="@color/colorHelloText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otp_resend_2"/>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/below_clip_art"
            android:scaleType="fitXY"
            android:layout_marginBottom="40dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"/>
        


<!--        <TextView-->
<!--            android:id="@+id/txt_footer"-->
<!--            android:textAlignment="center"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textSize="12sp"-->
<!--            android:paddingEnd="40dp"-->
<!--            android:lines="2"-->
<!--            android:paddingStart="40dp"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:layout_alignParentBottom="true"-->
<!--            android:layout_marginBottom="20dp"-->
<!--            android:textColor="@color/footerTextColor"/>-->


    </RelativeLayout>

</RelativeLayout>