<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    tools:context=".Activity_signup_verifyOTP">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorFade"
        android:paddingBottom="@dimen/_20sdp">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_12sdp"
            android:background="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_back" />

        <ImageView
            android:id="@+id/img_above"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-35dp"
            android:contentDescription="@string/img_above_clip_art"
            android:scaleType="fitXY"
            android:src="@drawable/above_clip_art" />

        <RelativeLayout
            android:id="@+id/layout_signUp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_31sdp">

            <TextView
                android:id="@+id/txt_sign_up_with"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Get Started with"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_sign_up_with"
                android:layout_alignStart="@id/txt_sign_up_with"
                android:layout_alignEnd="@id/txt_sign_up_with"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/onway"
                android:textAlignment="center"
                android:textColor="@color/colorHelloText"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="@dimen/_140sdp"
            android:id="@+id/layout_middle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:transitionName="transition_layout_mid">

            <TextView
                android:id="@+id/txt_enter_contact_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/login_text_enter_mobile_number"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/lay_mobile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/txt_enter_contact_no"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/contact_edit_field_style"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="18dp"
                    android:src="@drawable/srilankan_flag" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/vertical_line" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="11dp"
                    android:text="@string/country_code"
                    android:textColor="@color/colorBlack"
                    android:textSize="21sp" />

                <EditText
                    android:id="@+id/txt_contact_no"
                    android:layout_width="@dimen/_180sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="11dp"
                    android:background="@drawable/edit_text_bottom_outline"
                    android:inputType="number"
                    android:letterSpacing="0.5"
                    android:maxLength="9"
                    android:paddingStart="@dimen/_10sdp"
                    android:textColor="@color/colorBlack"
                    android:textSize="21sp" />
            </LinearLayout>

            <Button
                android:id="@+id/login_btn_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lay_mobile"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_70sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_70sdp"
                android:background="@drawable/btn_background"
                android:text="@string/btn_next"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

        </RelativeLayout>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:scaleType="fitXY"
            android:src="@drawable/below_clip_art" />

        <RelativeLayout
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="center">

            <TextView
                android:id="@+id/txtLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_and_account"
                android:textColor="@color/dark_black" />

            <TextView
                android:id="@+id/txt_signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_toEndOf="@id/txtLeft"
                android:text="@string/sign_in"
                android:textColor="@color/colorHelloText"
                android:textStyle="bold" />

        </RelativeLayout>



    </RelativeLayout>

</RelativeLayout>